--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 
 }
 dependencies {
-    implementation files('libs\\glide-3.6.0.jar')
+
+        implementation 'androidx.recyclerview:recyclerview:1.1.0'
+  
     implementation 'androidx.cardview:cardview:1.0.0'
 }
